# Concordia

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build_and_run.sh  code.md  meson.build
assets/shaders/: frag.glsl  skybox_frag.glsl  skybox_vert.glsl  unlit_frag.glsl  vert.glsl
assets/shaders/compiled/: frag.spv  skybox_frag.spv  skybox_vert.spv  unlit_frag.spv  vert.spv
config/: engine_config.yaml
pics/: concordia concept.md
plugins/SDL3Window/: SDL3Window.cpp  meson.build
plugins/VulkanGraphics/: VulkanGraphics.cpp  meson.build
shaders/: frag.glsl  vert.glsl
src/: Engine.cpp  Engine.h  ISystemGraphics.h  ISystemScript.h  ISystemWindow.h  PluginLoader.cpp  PluginLoader.h  main.cpp  meson.build  test.cpp
src/forma/: material.h  mesh.cpp  mesh.h
src/lumen/: pipeline.cpp  pipeline.h  shader_registry.cpp  shader_registry.h
src/memoria/: allocator.cpp  allocator.h  asset_manager.cpp  asset_manager.h  sampler.cpp  sampler.h  texture.cpp  texture.h
src/mundus/: entity.h  scene.cpp  scene.h
src/nucleus/: engine.cpp  engine.h
src/petra/: window.cpp  window.h
src/render/: context.cpp  context.h  render_object.h  vk_check.h
src/sensus/: input.cpp  input.h
src/vigil/: overlay.cpp  overlay.h
src/vista/: camera.cpp  camera.h
